# dpdk-plugin

./: .clang-format  .gitlab-ci.yml  .gitlab-ci_manual.yml  CMakeLists.txt  COPYING  Dockerfile  Makefile  README  configure  configure.plugin  design.md  tcpreplay_test.sh  test_capture.sh  test_two_queues.sh
.github/workflows/: ubuntu_18.yml  ubuntu_20.yml
scripts/: __preload__.zeek
src/: DPDK.cc  DPDK.h  Plugin.cc  Plugin.h  dpdk.bif  key_finder.cc
tests/: btest.cfg
tests/dpdk/: show-plugin.zeek
